# src/Models/TedSaveModel.py
@@ -1,8 +1,6 @@
 class TedSaveModel:
-    def __init__(self, pos_number, neg_number, pos_search_criteria, neg_search_criteria, original_languages, dataset_name):
-        self.pos_number = pos_number
-        self.neg_number = neg_number
-        self.pos_search_criteria = pos_search_criteria
-        self.neg_search_criteria = neg_search_criteria
+    def __init__(self, amount, search_criteria, original_languages, dataset_name):
+        self.amount = amount
+        self.search_criteria = search_criteria
         self.original_languages = original_languages
         self.dataset_name = dataset_name
